--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -12,11 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.15",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
-    "tailwindcss": "^4.1.14",
-    "vue": "^3.5.22"
+    "tailwindcss": "^4.1.15",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
